# scotty-ui

./: CMakeLists.txt  README.md  demo.c
src/: CMakeLists.txt  app.c  app.h  button.c  button.h  screen.c  screen.h
